force-app/main/default/objects/Board_Member__c/Board_Member__c.object-meta.xml
<CustomObject>
    <label>Board Membership</label>
    <nameField>
        <displayFormat>BoardID-{00000}</displayFormat>
        <label>Board Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Board Membership</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>