force-app/main/default/objects/Board_Member__c/fields/Account_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Case_Safe_ID__c</fullName>
    <formula>Contact__r.Account.Acc_Case_Safe_ID__c</formula>
    <label>Account Case Safe ID</label>
    <type>Text</type>
</CustomField>