force-app/main/default/objects/Board_Member__c/fields/Account_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Account_Nickname__c</fullName>
    <formula>IF( OR( Position_Held_On_Board__c = &quot;Chairman&quot;,Position_Held_On_Board__c = &quot;Lead Director&quot;,Position_Held_On_Board__c = &quot;Lead Director&quot;), 
 Board_Member_Of__r.Account_Nickname__c&amp;&quot;, &quot;&amp;Position_Held_On_Board__c ,
Board_Member_Of__r.Account_Nickname__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Nickname</label>
    <type>Text</type>
</CustomField>