force-app/main/default/objects/Board_Member__c/fields/Board_Member_Of__c.field-meta.xml
<CustomField>
    <fullName>Board_Member_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board Member Of</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Board_Members</relationshipName>
    <type>Lookup</type>
</CustomField>