force-app/main/default/objects/Board_Member__c/fields/Contact_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Case_Safe_ID__c</fullName>
    <formula>Contact__r.Case_Safe_ID__c</formula>
    <label>Contact Case Safe ID</label>
    <type>Text</type>
</CustomField>