force-app/main/default/objects/Board_Member__c/fields/Current_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Company__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Company</label>
    <type>Text</type>
</CustomField>