force-app/main/default/objects/Board_Member__c/fields/Member_Since__c.field-meta.xml
<CustomField>
    <fullName>Member_Since__c</fullName>
    <label>Member Since</label>
    <type>Date</type>
</CustomField>