force-app/main/default/objects/Board_Member__c/fields/Non_Board_Employment_Title__c.field-meta.xml
<CustomField>
    <fullName>Non_Board_Employment_Title__c</fullName>
    <formula>Contact__r.Title</formula>
    <label>Non-Board (Employment) Title</label>
    <type>Text</type>
</CustomField>