force-app/main/default/objects/Board_Member__c/fields/Position_Held_On_Board__c.field-meta.xml
<CustomField>
    <fullName>Position_Held_On_Board__c</fullName>
    <label>Position Held On Board</label>
    <length>255</length>
    <type>Text</type>
</CustomField>